--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,80 +1,130 @@
-/*pequeno [s] */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/*pequeno [s]*/
 @media (min-width: 256px){
-body
-{
-    display: block;
-}
-header{
-    display: block;
-    width: auto;
-    background-image: url(../img/Header.jpg);
-}
-nav{
-    display: block;
-    width: auto;
-}
-main{
-    display: block;
-    width: auto;
-}
-section{
-    display: block;
-    width: auto;
-}
-aside{
-    display: block;
-    width: auto;
-}
-footer{
-    display: block;
-    width: auto;
-}
-}
-@media (min-width: 768px) {
-    body{
-        display: block;
-        background-color: #1F79C2;
+    body
+    {
+        background-color: #444444;
+        font-family: 'Open Sans', sans-serif;
     }
     header{
         display: block;
-        justify-content: space-around;
-        align-content: space-between;        
-        background-image: url(../img/Header.jpg);
-        background-position: center center;
-        background-repeat: no-repeat;
+        position: sticky;
+        top: 0;
         width: 100%;
-        height: auto;
+        height: 180px;
+        background-image: url(../img/Header.jpg);
+        background-size: cover;
+        background-color: black;
+        align-content: flex-start;
+        justify-content: center;
+    }
+    #logo{
+        float: left;
+        margin-left: 30%;
+    }
+    #title{
+        color: aliceblue;
+        font-size: x-large;
+
+    }
+    #slogan{
+        color: aliceblue;
+        font-size: small;
     }
     nav{
-        display: flex;
-        justify-content: space-around;
-        align-content: space-between;
-    }    
-    nav a{
-        background-color: #DE847A;
-        border-radius: 20px;
-        width: 200px;
-        height: 90px;
+        width: 100%;
+        height: 100%;
+        position: fixed;
+        background-color: #F56A42;
+        overflow: hidden;
     }
-    nav a:hover{
-    background-color: #DE847A;
+    nav{
+        max-height: 0;
+        transition: max-height .5s ease-out;
     }
+    nav p a{
+        display: block;
+        color: #99B1DE;
+        text-decoration: none;
+    }
+    nav p a:hover{
+        background-color: aquamarine;
+    }
+    /*Begin of the hamburger*/
+        /* Menu Icon */
+        .hamb{
+            cursor: pointer;
+            padding: 40px 20px;
+        }/* Style label tag */
+
+        .hamb-line {
+            background: blue;
+            display: block;
+            height: 2px;
+            position: relative;
+            width: 24px;
+
+        } /* Style span tag */
+
+        .hamb-line::before,
+        .hamb-line::after{
+            background: red;
+            content: '';
+            display: block;
+            height: 100%;
+            position: absolute;
+            transition: all .2s ease-out;
+            width: 100%;
+        }
+        .hamb-line::before{
+            top: 5px;
+        }
+        .hamb-line::after{
+            top: -5px;
+        }
+
+        .side-menu {
+            display: none;
+        } /* Hide checkbox */
+    /*End of the hamburger*/
+    /*Begin of the x or =*/
+        /* Toggle menu icon */
+        .side-menu:checked ~ nav{
+            max-height: 100%;
+        }
+        .side-menu:checked ~ .hamb .hamb-line {
+            background: transparent;
+        }
+        .side-menu:checked ~ .hamb .hamb-line::before {
+            transform: rotate(-45deg);
+            top:0;
+        }
+        .side-menu:checked ~ .hamb .hamb-line::after {
+            transform: rotate(45deg);
+            top:0;
+        }
+    /*End of the x or =*/
     main{
+        display: block;
         width: auto;
     }
     section{
+        display: block;
         width: auto;
     }
     aside{
+        display: block;
         width: auto;
     }
     footer{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        align-content: flex-start;
-        justify-content: space-around;
-        align-content: space-evenly;
-        background-color: #99B1DE;
+        display: block;
+        width: auto;
+        background-color: #353535;
     }
     footer a {
         color: #A699DE;
@@ -82,10 +132,124 @@ footer{
     footer a:hover{
         color: #D0ADFA;
     }
+    /*Burger block*/
+    .burger-block{
+        display: block;
+        align-content: flex-start;
+    }
+    .burger .master {
+        border-radius: 15px;
+        width: 250px;
+        height: 250px;
+        box-shadow: 2px 6px;
+    }
+    .burger{
+        background-color: #F56A42;
+        width: 300px;
+        height: auto;
+        padding: 5px;
+        margin: 10px;
+        border-radius: 15px;
+        box-shadow: 2px 6px;
+    }
+    .burger .child{
+        color: white;
+        text-shadow: 1px 2px 2px black;
+
+    }
 }
-/*
-Header block
-*/
+@media (min-width: 768px) {
+    body{
+        background-color: #444444;
+        font-family: 'Open Sans', sans-serif;
+    }
+    header{
+        display: block;
+        justify-content: space-around;
+        align-content: space-between;        
+        background-image: url(../img/Header.jpg);
+        background-color: black;
+        background-position: center center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 280px;
+    }
+    nav{
+        display: flex;
+        justify-content: space-around;
+        align-content: space-between;
+        text-decoration: none;
+        max-height: none;
+        height: 45px;
+        width: 100%;
+        position: absolute;
+        top: 281px;
+    }    
+    nav a{
+        background-color: #DE847A;
+        border-radius: 20px;
+        width: 100px;
+        height: auto;
+        text-decoration: none;
+    }
+    nav a:hover{
+    background-color: #DE847A;
+    text-decoration: none;
+    }
+    .hamb{
+        display: none;
+    }
+    main{
+        width: auto;
+        margin-top: 50px;
+    }
+    section{
+        width: auto;
+    }
+    footer{
+        width: 100%;
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-content: flex-start;
+        justify-content: space-around;
+        align-content: space-evenly;
+        background-color: #353535;
+        margin: 100px 0 0 0;
+    }
+    footer a {
+        color: #A699DE;
+    }
+    footer a:hover{
+        color: #D0ADFA;
+    }
+        /*Burger block*/
+    .burger-block{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        align-content: flex-start;
+    }
+    .burger .master {
+        border-radius: 15px;
+        width: 250px;
+        height: 250px;
+        box-shadow: 2px 6px;
+    }
+    .burger{
+        background-color: #F56A42;
+        width: 300px;
+        height: auto;
+        padding: 5px;
+        margin: 10px;
+        border-radius: 15px;
+        box-shadow: 2px 6px;
+    }
+    .burger .child{
+        color: white;
+        text-shadow: 1px 2px 2px black;
+
+    }
+}
+/*Header block*/
 #logo{
     display: inline-block;
     width: 100px;
@@ -103,28 +267,3 @@ Header block
     height: auto;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-/*
-Burger block
-*/
-.burger-block{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    align-content: flex-start;
-}
-.burger .master {
-    border-radius: 15px;
-    width: 250px;
-    height: 250px;
-    box-shadow: 2px 6px;
-}
-.burger{
-    background-color: #F56A42;
-    width: 300px;
-    height: auto;
-    padding: 5px;
-    margin: 10px;
-    border-radius: 15px;
-    box-shadow: 2px 6px;
-}
-
-/*Footer*/
